fix(markdown): not wrapping text properly

--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -12,14 +12,19 @@
 
 @import "utils/layout.scss";
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-bottom: 1.5rem;
 }
 
 * {
-  -moz-box-sizing: border-box; 
-  -webkit-box-sizing: border-box; 
-  box-sizing: border-box; 
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   -webkit-overflow-scrolling: touch;
   -webkit-user-drag: none;
@@ -32,6 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -41,6 +47,7 @@ h1, h2, h3, h4, h5, h6 {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -50,6 +57,7 @@ h1, h2, h3, h4, h5, h6 {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -59,6 +67,7 @@ h1, h2, h3, h4, h5, h6 {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -68,6 +77,7 @@ h1, h2, h3, h4, h5, h6 {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -179,6 +189,7 @@ pre {
   border-radius: 4px;
   width: 100%;
   background-color: #212121;
+  white-space: pre-wrap;
 }
 
 .badge {
@@ -376,7 +387,7 @@ $listWidth: 300px;
 
   &.channel {
     grid-row-end: 3;
-    grid-row-start: 2;    
+    grid-row-start: 2;
   }
 
   &.users {
@@ -608,7 +619,7 @@ img {
       flex-direction: column;
     }
 
-    > div {
+    >div {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -683,7 +694,7 @@ img {
   }
 
   &-sm {
-    flex:1;
+    flex: 1;
     font-size: 0.75rem;
     padding: 0.75rem;
 
@@ -692,6 +703,7 @@ img {
     }
   }
 }
+
 .btn:hover {
   text-decoration: underline;
 }
